--- a/styles/history.css
+++ b/styles/history.css
@@ -1,3 +1,28 @@
 .sample {
-    
+    background-color:cadetblue;
+    border:1px solid grey;
+}
+
+.pure-u-1-3 {
+    border: 2px solid cadetblue;
+    box-sizing: border-box;
+    padding: 5px;
+    background-color: lightsteelblue;
+}
+
+.pure-u-1-5 {
+    text-align: center;
+    border:1px solid white;
+    box-sizing: border-box;
+}
+
+.pure-u-1-5 a {
+    color: rgb(232, 188, 106);
+    text-decoration: none;
+    padding: 5px;
+    display: inline-block;
+}
+
+.pure-u-1-5:hover {
+    background-color: white;
 }
