--- a/styles/cascade.css
+++ b/styles/cascade.css
@@ -34,3 +34,83 @@ nav ul {
     background-color:cornflowerblue;
     margin-bottom: 15px;
 }
+
+nav li {
+    display: inline-block;
+}
+
+nav a {
+    padding: 9px;
+    display: block;
+    width: 100px;
+    text-decoration: none;
+    background-color: cornflowerblue;
+    color:white;
+}
+
+nav a:hover {
+    background-color:rgb(54, 80, 128);
+}
+
+footer {
+    color: white;
+    padding: 9px;
+    background-color: rgba(68, 165, 181, 0.8);
+    clear: both;
+}
+
+footer p {
+    font-size: 10px;
+}
+
+.container {
+    width: 960px;
+    background-color: rgba(255, 255, 255, 0.7);
+    margin: auto;
+}
+
+.content {
+    padding: 10px;
+    width: 630px;
+    float: left;
+}
+
+.sidebar {
+    float: left;
+    width: 300px;
+    background-color: rgba(255, 255, 255, 0.4);
+    color: rgb(100, 132, 237);
+}
+
+.sidebar a {
+    color: rgb(100, 132, 237);
+}
+
+figure {
+    margin: 0px;
+}
+
+figcaption {
+    font-size: 10px;
+}
+
+.image-right {
+    float: right;
+}
+
+.image-left {
+    float: left;
+    margin-right: 7px;
+}
+
+h1, h2, h3 {
+        font-family: "Protest Revolution", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+}
+
+p, li {
+    font-family: "Unna", serif;
+    font-weight: 500;
+    font-style: normal;
+}
