--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,8 @@ nav li {
 }
 
 nav a {
+    flex-grow: 1;
+    text-align: center;
     padding: 9px;
     display: block;
     width: 100px;
@@ -43,3 +45,5 @@ body {
 h1 {
     text-align: center;
 }
+
+
