--- a/styles/small.css
+++ b/styles/small.css
@@ -60,7 +60,7 @@ nav a:hover {
 }
 
 figure {
-    margin-left: 0;
+    margin: 0;
 }
 
 figcaption {
@@ -111,11 +111,17 @@ footer p {
 
 h1 {
     font-size: 2em;
+    padding-left: 1em;
+    margin-left: 15px;
 }
 
 h1, h2, h3 {
-    padding-left: 1.4em;
+    padding: 0;
     font-family: "Protest Revolution", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+h2 {
+    margin-left: 15px;
 }
