--- a/styles/stew.css
+++ b/styles/stew.css
@@ -8,7 +8,7 @@ body {
 
 .stew-content {
     background-color:#cccccc;
-    width:700px;
+    /* width:700px; */
     padding:10px;
     margin:auto;
 }
